# OpaqueToolsBench

./: .gitignore  README.md  pyproject.toml  requirements.txt
sample_traces/bfcl/: README.md
sample_traces/bfcl/easytool/executable_multiple_function_name[all:increasing_number]_desc[all:blank]_param[all:blank_descriptions]/: v0_results.json  v0_token_usage_generation.json
sample_traces/bfcl/easytool/executable_multiple_function_name[all:increasing_number]_param[all:remove_all]/: v0_results.json
sample_traces/bfcl/easytool/executable_simple_name[all:increasing_number]_desc[all:blank]_param[all:blank_descriptions]/: v0_metadata.json
sample_traces/bfcl/easytool/executable_simple_name[all:increasing_number]_desc[all:blank]_param[all:remove_all]/: v0_metadata.json  v0_token_usage_generation.json
src/datasets/: run_args.py
src/datasets/BrowseCompPlus/: README.md  args.py  configurable_tool_handler.py  evaluate.py  evaluation_utils.py  extract_base_urls.py  generate_improved_descriptions.py  iterative_improve.py  prompts.py  run.py
src/datasets/BrowseCompPlus/data/: test_queries.tsv  (+1 more)
src/datasets/bfcl/: README.md  args.py  enhanced_metrics.py  evaluate.py  function_call_cache.json  generate_configs.py  generate_descriptions.py  iterative_improve.py  prompts.py  run.py
src/generation_utils/: api_request_parallel_processor.py  openai_parallel_generate.py  rate_limits.py  togetherai_parallel_generate.py  token_tracker.py
src/generation_utils/tests/: test_generations.py  test_together_generations.py  test_token_tracking_tools.py  test_tool_calls.py
(+746 files in other folders)
